--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 <body>
 
   <div id="app">
+    <!-- Sort Options -->
+    <div class="sort-options">
+        <label for="sortAttribute">Sort by:</label>
+        <select v-model="sortAttribute" id="sortAttribute">
+          <option value="subject">Subject</option>
+          <option value="location">Location</option>
+          <option value="price">Price</option>
+          <option value="space">Spaces</option>
+        </select>
+  
+        <label for="sortOrder">Order:</label>
+        <select v-model="sortOrder" id="sortOrder">
+          <option value="asc">Ascending</option>
+          <option value="desc">Descending</option>
+        </select>
+      </div>
+
     <!-- Loop over each class to generate a card -->
     <class-card
       v-for="(classInfo, index) in classes"
@@ -31,19 +48,21 @@
       el: '#app',
       data() {
         return {
-          // Array of lessons with 10 entries, each having 5 available spaces and a Font Awesome icon
-          classes: [
-            { subject: "Mathematics", location: "Room 101", price: 50, space: 5, icon: 'fa fa-calculator' },
-            { subject: "Science", location: "Lab 3", price: 40, space: 5, icon: 'fa fa-flask' },
-            { subject: "Art", location: "Room 204", price: 30, space: 5, icon: 'fa fa-paint-brush' },
-            { subject: "History", location: "Room 301", price: 35, space: 5, icon: 'fa fa-landmark' },
-            { subject: "Music", location: "Music Hall", price: 45, space: 5, icon: 'fa fa-music' },
-            { subject: "Computer Science", location: "Lab 1", price: 55, space: 5, icon: 'fa fa-laptop-code' },
-            { subject: "English", location: "Room 102", price: 25, space: 5, icon: 'fa fa-book' },
-            { subject: "Physical Education", location: "Gym", price: 20, space: 5, icon: 'fa fa-basketball-ball' },
-            { subject: "Chemistry", location: "Lab 5", price: 60, space: 5, icon: 'fa fa-atom' },
-            { subject: "Biology", location: "Lab 2", price: 50, space: 5, icon: 'fa fa-leaf' }
-          ],
+            sortAttribute: 'subject', // default sorting attribute
+            sortOrder: 'asc', // default sorting order
+            // Array of lessons with 10 entries, each having 5 available spaces and a Font Awesome icon
+            classes: [
+                { subject: "Mathematics", location: "Room 101", price: 50, space: 5, icon: 'fa fa-calculator' },
+                { subject: "Science", location: "Lab 3", price: 40, space: 5, icon: 'fa fa-flask' },
+                { subject: "Art", location: "Room 204", price: 30, space: 5, icon: 'fa fa-paint-brush' },
+                { subject: "History", location: "Room 301", price: 35, space: 5, icon: 'fa fa-landmark' },
+                { subject: "Music", location: "Music Hall", price: 45, space: 5, icon: 'fa fa-music' },
+                { subject: "Computer Science", location: "Lab 1", price: 55, space: 5, icon: 'fa fa-laptop-code' },
+                { subject: "English", location: "Room 102", price: 25, space: 5, icon: 'fa fa-book' },
+                { subject: "Physical Education", location: "Gym", price: 20, space: 5, icon: 'fa fa-basketball-ball' },
+                { subject: "Chemistry", location: "Lab 5", price: 60, space: 5, icon: 'fa fa-atom' },
+                { subject: "Biology", location: "Lab 2", price: 50, space: 5, icon: 'fa fa-leaf' }
+            ],
         };
       },
       // Registering the class card component
