--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>After School Classes</title>
+  <title>EduClassCards</title>
   <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -123,94 +123,242 @@
 
   <script>
     // Vue.js App Initialization
+    // new Vue({
+    //   el: '#app',
+    //   data() {
+    //     return {
+    //       showCart: false,
+    //       classes: [
+    //         { subject: "Mathematics", location: "Room 101", price: 50, space: 5, icon: 'fa fa-calculator' },
+    //         { subject: "Science", location: "Lab 3", price: 40, space: 5, icon: 'fa fa-flask' },
+    //         { subject: "Art", location: "Room 204", price: 30, space: 5, icon: 'fa fa-paint-brush' },
+    //         { subject: "History", location: "Room 301", price: 35, space: 5, icon: 'fa fa-landmark' },
+    //         { subject: "Music", location: "Music Hall", price: 45, space: 5, icon: 'fa fa-music' },
+    //         { subject: "Computer Science", location: "Lab 1", price: 55, space: 5, icon: 'fa fa-laptop-code' },
+    //         { subject: "English", location: "Room 102", price: 25, space: 5, icon: 'fa fa-book' },
+    //         { subject: "Physical Education", location: "Gym", price: 20, space: 5, icon: 'fa fa-basketball-ball' },
+    //         { subject: "Chemistry", location: "Lab 5", price: 60, space: 5, icon: 'fa fa-atom' },
+    //         { subject: "Biology", location: "Lab 2", price: 50, space: 5, icon: 'fa fa-leaf' }
+    //       ],
+    //       cart: [],
+    //       sortAttribute: 'subject',
+    //       sortOrder: 'asc',
+    //       name: '',
+    //       phone: '',
+    //       isCheckoutValid: false,
+    //       checkoutMessage: '',
+    //       searchQuery: '',
+    //       searchResults: [],
+    //     };
+    //   },
+
+    //   computed: {
+    //     sortedClasses() {
+    //       return this.classes.sort((a, b) => {
+    //         let comparison = 0;
+    //         if (typeof a[this.sortAttribute] === 'string') {
+    //           comparison = a[this.sortAttribute].localeCompare(b[this.sortAttribute]);
+    //         } else {
+    //           comparison = a[this.sortAttribute] - b[this.sortAttribute];
+    //         }
+    //         return this.sortOrder === 'desc' ? comparison * -1 : comparison;
+    //       });
+    //     }
+    //   },
+
+    //   methods: {
+    //     searchLessons() {
+    //       const query = this.searchQuery.toLowerCase();
+    //       this.searchResults = this.classes.filter(classInfo => {
+    //         return (
+    //           classInfo.subject.toLowerCase().includes(query) ||
+    //           classInfo.location.toLowerCase().includes(query)
+    //         );
+    //       });
+    //     },
+
+    //     addToCart(index) {
+    //       if (this.classes[index].space > 0) {
+    //         this.classes[index].space--;
+    //         this.cart.push({ ...this.classes[index] });
+    //       }
+    //     },
+
+    //     toggleCart() {
+    //       this.showCart = this.cart.length === 0 ? false : !this.showCart;
+    //     },
+
+    //     removeFromCart(index) {
+    //       const removedItem = this.cart[index];
+    //       this.cart.splice(index, 1);
+    //       const originalClass = this.classes.find(c => c.subject === removedItem.subject);
+    //       if (originalClass) {
+    //         originalClass.space++;
+    //       }
+    //     },
+
+    //     validateCheckout() {
+    //       this.isCheckoutValid = this.name.trim() !== '' && this.phone.trim() !== '';
+    //     },
+
+    //     checkout() {
+    //       this.checkoutMessage = `Order submitted successfully for ${this.name}!`;
+    //       this.cart = [];
+    //       this.name = '';
+    //       this.phone = '';
+    //       this.isCheckoutValid = false;
+    //       this.showCart = false;  // Automatically switch back to lesson view
+    //     }
+    //   }
+    // });
+
     new Vue({
       el: '#app',
       data() {
         return {
-          showCart: false,
-          classes: [
-            { subject: "Mathematics", location: "Room 101", price: 50, space: 5, icon: 'fa fa-calculator' },
-            { subject: "Science", location: "Lab 3", price: 40, space: 5, icon: 'fa fa-flask' },
-            { subject: "Art", location: "Room 204", price: 30, space: 5, icon: 'fa fa-paint-brush' },
-            { subject: "History", location: "Room 301", price: 35, space: 5, icon: 'fa fa-landmark' },
-            { subject: "Music", location: "Music Hall", price: 45, space: 5, icon: 'fa fa-music' },
-            { subject: "Computer Science", location: "Lab 1", price: 55, space: 5, icon: 'fa fa-laptop-code' },
-            { subject: "English", location: "Room 102", price: 25, space: 5, icon: 'fa fa-book' },
-            { subject: "Physical Education", location: "Gym", price: 20, space: 5, icon: 'fa fa-basketball-ball' },
-            { subject: "Chemistry", location: "Lab 5", price: 60, space: 5, icon: 'fa fa-atom' },
-            { subject: "Biology", location: "Lab 2", price: 50, space: 5, icon: 'fa fa-leaf' }
-          ],
-          cart: [],
-          sortAttribute: 'subject',
-          sortOrder: 'asc',
-          name: '',
-          phone: '',
-          isCheckoutValid: false,
-          checkoutMessage: '',
-          searchQuery: '',
-          searchResults: [],
+            showCart: false, // Flag to toggle between lesson view and cart view
+            lessons: [], // Array to hold all lessons fetched from the backend
+            cart: [], // Array to hold items added to the cart
+            sortAttribute: 'subject',
+            sortOrder: 'asc',
+            name: '', // User's name for checkout
+            phone: '', // User's phone number for checkout
+            isCheckoutValid: false, // Flag to check if checkout form is valid
+            checkoutMessage: '', // Message displayed upon successful checkout
+            searchQuery: '', // Search query for filtering lessons
+            searchResults: [], // Results after filtering lessons
+            loading: true, // Flag to track loading state
         };
       },
 
-      computed: {
+    computed: {
+        // Computed property to return sorted classes based on the selected attribute and order
         sortedClasses() {
-          return this.classes.sort((a, b) => {
-            let comparison = 0;
-            if (typeof a[this.sortAttribute] === 'string') {
-              comparison = a[this.sortAttribute].localeCompare(b[this.sortAttribute]);
+            return this.lessons.sort((a, b) => {
+                let comparison = 0;
+
+                if (typeof a[this.sortAttribute] === 'string') {
+                    comparison = a[this.sortAttribute].localeCompare(b[this.sortAttribute]);
+                } else {
+                    comparison = a[this.sortAttribute] - b[this.sortAttribute];
+                }
+
+                return this.sortOrder === 'desc' ? comparison * -1 : comparison;
+            });
+        }
+    },
+
+    methods: {
+      // Fetch lessons from the backend using GET
+      async fetchLessons() {
+          try {
+              const response = await fetch('http://localhost:3000/lessons');
+              if (!response.ok) {
+                  throw new Error('Server is not available');
+              }
+              const data = await response.json();
+              this.lessons = data;
+              this.loading = false;  // Lessons have been fetched, stop loading
+          } catch (error) {
+              console.error('Error fetching lessons:', error);
+              this.loading = false;  // Stop loading even if there's an error
+              alert('Unable to fetch lessons. Please check if the server is running.');
+          }
+      },
+
+      // Fetch to save a new order using POST
+      async submitOrder() {
+        const order = {
+          name: this.name,
+          phone: this.phone,
+          lessonIDs: this.cart.map(item => item._id),
+          spaces: this.cart.length
+        };
+
+        try {
+            const response = await fetch('http://localhost:3000/orders', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(order)
+            });
+
+            if (response.ok) {
+                const result = await response.json();
+                this.checkoutMessage = result.message;
+                this.cart = [];  // Clear the cart after successful order
             } else {
-              comparison = a[this.sortAttribute] - b[this.sortAttribute];
+                this.checkoutMessage = 'Error submitting order';
             }
-            return this.sortOrder === 'desc' ? comparison * -1 : comparison;
-          });
+        } catch (error) {
+            console.error('Error submitting order:', error);
+            this.checkoutMessage = 'Error submitting order';
         }
       },
 
-      methods: {
-        searchLessons() {
-          const query = this.searchQuery.toLowerCase();
-          this.searchResults = this.classes.filter(classInfo => {
-            return (
-              classInfo.subject.toLowerCase().includes(query) ||
-              classInfo.location.toLowerCase().includes(query)
-            );
-          });
-        },
+      // Fetch to update lesson space using PUT
+      async updateLessonSpace(lessonId, newSpace) {
+        try {
+            const response = await fetch(`http://localhost:3000/lessons/${lessonId}`, {
+                method: 'PUT',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ space: newSpace })
+            });
 
-        addToCart(index) {
-          if (this.classes[index].space > 0) {
-            this.classes[index].space--;
-            this.cart.push({ ...this.classes[index] });
+            if (response.ok) {
+                const result = await response.json();
+                console.log('Lesson updated:', result);
+                this.fetchLessons();  // Re-fetch lessons to update the view
+            } else {
+                console.error('Error updating lesson:', response);
+            }
+        } catch (error) {
+            console.error('Error updating lesson:', error);
+        }
+      },
+
+      // Method to add items to the cart
+      addToCart(index) {
+          if (this.lessons[index].space > 0) {
+              this.lessons[index].space--;
+              this.cart.push({ ...this.lessons[index] });
           }
-        },
+      },
 
-        toggleCart() {
-          this.showCart = this.cart.length === 0 ? false : !this.showCart;
-        },
-
-        removeFromCart(index) {
+      // Method to remove items from the cart
+      removeFromCart(index) {
           const removedItem = this.cart[index];
           this.cart.splice(index, 1);
-          const originalClass = this.classes.find(c => c.subject === removedItem.subject);
-          if (originalClass) {
-            originalClass.space++;
+          const lesson = this.lessons.find(lesson => lesson._id === removedItem._id);
+          if (lesson) {
+              lesson.space++;  // Increment the space back in the original lessons list
           }
-        },
+      },
 
-        validateCheckout() {
+      // Validate checkout form
+      validateCheckout() {
           this.isCheckoutValid = this.name.trim() !== '' && this.phone.trim() !== '';
-        },
+      },
 
-        checkout() {
-          this.checkoutMessage = `Order submitted successfully for ${this.name}!`;
-          this.cart = [];
-          this.name = '';
-          this.phone = '';
-          this.isCheckoutValid = false;
-          this.showCart = false;  // Automatically switch back to lesson view
-        }
+      // Toggle between lessons view and cart view
+      toggleCart() {
+          this.showCart = !this.showCart;
+      },
+
+      // Search functionality for filtering lessons
+      searchLessons() {
+          this.searchResults = this.lessons.filter(lesson => {
+              return lesson.subject.toLowerCase().includes(this.searchQuery.toLowerCase()) ||
+                     lesson.location.toLowerCase().includes(this.searchQuery.toLowerCase());
+          });
       }
-    });
+    },
+
+    // Fetch lessons when the component is created
+    created() {
+        this.fetchLessons();
+    }
+  });
+    
   </script>
 </body>
 </html>
