updated the nav bar elements

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
   <div id="app">
     <!-- Navigation Bar -->
     <div class="navbar">
-      <a href="#">Home</a>
-      <a href="#">Classes</a>
-
       <!-- Search Bar -->
       <input
         type="text"
@@ -257,12 +254,12 @@
       },
 
       // Search functionality for filtering lessons
-      searchLessons() {
-          this.searchResults = this.lessons.filter(lesson => {
-              return lesson.subject.toLowerCase().includes(this.searchQuery.toLowerCase()) ||
-                     lesson.location.toLowerCase().includes(this.searchQuery.toLowerCase());
-          });
-      }
+      // searchLessons() {
+      //     this.searchResults = this.lessons.filter(lesson => {
+      //         return lesson.subject.toLowerCase().includes(this.searchQuery.toLowerCase()) ||
+      //                lesson.location.toLowerCase().includes(this.searchQuery.toLowerCase());
+      //     });
+      // }
     },
 
     // Fetch lessons when the component is created
