final touch-up in styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <div id="app">
       <!-- Navigation Bar -->
+       
       <div class="navbar">
+        <a href="">EDUCLASSCARDS</a>
         <!-- Search Bar -->
         <input
           type="text"
