--- a/index.html
+++ b/index.html
@@ -129,10 +129,6 @@
             </button>
           </div>
 
-          <!-- Checkout confirmation message -->
-          <div v-if="checkoutMessage" style="margin-top: 10px">
-            {{ checkoutMessage }}
-          </div>
         </div>
       </div>
     </div>
@@ -181,7 +177,7 @@
           // Fetch lessons from the backend using GET
           async fetchLessons() {
             try {
-              const response = await fetch("http://localhost:3000/lessons");
+              const response = await fetch("https://fullstack-coursework-m00937573.onrender.com/lessons");
               if (!response.ok) {
                 throw new Error("Server is not available");
               }
@@ -207,7 +203,7 @@
             };
 
             try {
-              const response = await fetch("http://localhost:3000/orders", {
+              const response = await fetch("https://fullstack-coursework-m00937573.onrender.com/orders", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify(order),
@@ -234,7 +230,7 @@
           async updateLessonSpace(lessonId, newSpace) {
             try {
               const response = await fetch(
-                `http://localhost:3000/lessons/${lessonId}`,
+                `https://fullstack-coursework-m00937573.onrender.com/lessons/${lessonId}`,
                 {
                   method: "PUT",
                   headers: { "Content-Type": "application/json" },
@@ -289,7 +285,7 @@
             if (!this.searchQuery.trim()) {
               try {
                 // Fetch all lessons when the search query is cleared
-                const response = await fetch("http://localhost:3000/lessons");
+                const response = await fetch("https://fullstack-coursework-m00937573.onrender.com/lessons");
                 const data = await response.json();
 
                 console.log("Fetched all lessons:", data);
@@ -302,7 +298,7 @@
 
             try {
               const response = await fetch(
-                `http://localhost:3000/search?q=${encodeURIComponent(
+                `https://fullstack-coursework-m00937573.onrender.com/search?q=${encodeURIComponent(
                   this.searchQuery
                 )}`
               );
