adding validation message for view cart button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button
           class="cart-button"
           :disabled="cart.length === 0"
-          @click="toggleCart"
+          @click="handleCartToggle"
         >
           {{ showCart ? 'Back to Lessons' : 'View Cart' }}
         </button>
@@ -274,6 +274,14 @@
           validateCheckout() {
             this.isCheckoutValid =
               this.name.trim() !== "" && this.phone.trim() !== "";
+          },
+
+          handleCartToggle() {
+            if (this.cart.length === 0) {
+              alert("Your cart is empty!"); // Alert for an empty cart
+              return;
+            }
+            this.toggleCart(); // Proceed with the toggle logic
           },
 
           // Toggle between lessons view and cart view
